--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,11 @@ nav ul li {
 }
 
 i {
-  font-size: 150px;
+  font-size: 80px;
+}
+
+.home-icons {
+  text-align: center;
 }
 
 .fa-github {
@@ -53,6 +57,27 @@ i {
 
 .name {
   display: inline-block;
+  margin-bottom: 0;
+}
+
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    background: white;
+    width: 8px;
+    height: 8px;
+    margin: -4px 0 0 -4px;
+}
+
+#fp-nav ul li a.active span,
+.fp-slidesNav ul li a.active span,
+#fp-nav ul li:hover a.active span,
+.fp-slidesNav ul li:hover a.active span {
+    width: 16px;
+    height: 16px;
+    margin: -8px 0 0 -8px;
+    background: transparent;
+    box-sizing: border-box;
+    border: 1px solid #24221F;
 }
 
 body {
