--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
   font-family: 'Raleway';
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: #6C818B;
+  text-decoration: none;
+}
 
 ul {
   list-style: none;
@@ -27,7 +35,11 @@ nav ul li {
 }
 
 i {
-  font-size: 80px;
+  font-size: 60px;
+}
+
+img.game-image {
+  height: 100px;
 }
 
 .home-icons {
@@ -107,7 +119,7 @@ body {
   color: 	#DCDCDC;
 }
 
-.projects {
+.project {
   background-color: #6C818B;
   color: white;
   /* border: 1px solid black; */
@@ -121,35 +133,59 @@ body {
   height: 200px;
   margin: 5px;
   padding: 5px;
-  opacity: 0.4;
+  opacity: 0.7;
   text-align: center;
+  display:block;
+  overflow: auto;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
+
 }
+
 .project-2 {
   background-color: #909DA4;
   color: white;
   height: 200px;
   margin: 5px;
   padding: 5px;
-  opacity: 0.4;
+  opacity: 0.7;
   text-align: center;
+  display:block;
+  overflow:auto;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
 }
+
 .project-3 {
   background-color: #909DA4;
   color: white;
   height: 200px;
   margin: 5px;
   padding: 5px;
-  opacity: 0.4;
+  opacity: 0.7;
   text-align: center;
+  display:block;
+  overflow:auto;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
 }
+
 .project-4 {
   background-color: #909DA4;
   color: white;
   height: 200px;
   margin: 5px;
   padding: 5px;
-  opacity: 0.4;
+  opacity: 0.7;
   text-align: center;
+  display:block;
+  overflow:auto;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
 }
 
 .contact {
