--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,20 @@ i {
   font-size: 60px;
 }
 
-img.game-image {
+.game-image {
   height: 100px;
+  margin: auto 0;
+  margin-bottom: 10px;
+  max-width: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.skill-box {
+  border: solid 1px white;
+  padding 2px;
+  margin: 2px;
 }
 
 .home-icons {
@@ -127,12 +139,21 @@ body {
   opacity: 0.4;
 }
 
-.project-1 {
+.project h2 {
+  margin: 0;
+  padding-top: 10px
+}
+
+.project hr {
+  margin: 8px;
+}
+
+.project-1, .project-2, .project-3, .project-4 {
   background-color: #909DA4;
   color: white;
   height: 200px;
-  margin: 5px;
-  padding: 5px;
+  margin: 2px;
+  padding: 2px;
   opacity: 0.7;
   text-align: center;
   display:block;
@@ -141,51 +162,6 @@ body {
   height: auto;
   min-height: 100% !important;
 
-}
-
-.project-2 {
-  background-color: #909DA4;
-  color: white;
-  height: 200px;
-  margin: 5px;
-  padding: 5px;
-  opacity: 0.7;
-  text-align: center;
-  display:block;
-  overflow:auto;
-  position: relative;
-  height: auto;
-  min-height: 100% !important;
-}
-
-.project-3 {
-  background-color: #909DA4;
-  color: white;
-  height: 200px;
-  margin: 5px;
-  padding: 5px;
-  opacity: 0.7;
-  text-align: center;
-  display:block;
-  overflow:auto;
-  position: relative;
-  height: auto;
-  min-height: 100% !important;
-}
-
-.project-4 {
-  background-color: #909DA4;
-  color: white;
-  height: 200px;
-  margin: 5px;
-  padding: 5px;
-  opacity: 0.7;
-  text-align: center;
-  display:block;
-  overflow:auto;
-  position: relative;
-  height: auto;
-  min-height: 100% !important;
 }
 
 .contact {
